--- a/src/app/add-champion/add-champion.component.html
+++ b/src/app/add-champion/add-champion.component.html
@@ -1,19 +1,21 @@
-<form [formGroup]="addChamptionForm" (ngSubmit)="onSubmit()">
-    <label for="first-name">Name: </label>
-    <input id="first-name" type="text" formControlName="name" />
-  
+<div class="container">
+  <form [formGroup]="addChamptionForm" (ngSubmit)="onSubmit()">
+    <label for="name">Name: </label>
+    <input id="name" type="text" formControlName="name" />
     <br />
-  
-    <label for="last-name">Title: </label>
-    <input id="last-name" type="text" formControlName="title" />
-  
- 
+
+    <label for="title">Title: </label>
+    <input id="title" type="text" formControlName="title" />
     <br />
-    <label for="last-name">Key: </label>
-    <input id="last-name" type="text" formControlName="key" />
+
+    <label for="key">Key: </label>
+    <input id="key" type="text" formControlName="key" />
     <br />
-  
 
     <button type="submit">Submit Profile</button>
-    
   </form>
+
+  <div *ngIf="championAdded" class="success-message">
+    Champion added successfully!
+  </div>
+</div>
